# aoc2022

./: .gitignore  Cargo.toml
next_day/: Cargo.toml
next_day/src/: main.rs
src/: day01-1.rs  day01-2.rs  day01.rs  day02-1.rs  day02-2.rs  day02.rs  day03-1.rs  day03-2.rs  day04-1.rs  day04-2.rs  day05-1.rs  day05-2.rs  day06-1.rs  day06-2.rs  day07-1.rs  day07-2.rs  day08-1.rs  day08-2.rs  day09-1.rs  day09-2.rs  day10-1.rs  day10-2.rs  day11-1.rs  day11-2.rs  day12-1.rs  day12-2.rs  day13-1.rs  day13-2.rs  day14-1.rs  day14-2.rs  day15-1.rs  day15-2.rs  day16-1.rs  day16-2.rs  day17-1.rs  day17-2.rs  day18-1.rs  day18-2.rs  lib.rs
