[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc"

[dependencies]
anyhow = "1.0.66"
itertools = "0.10.5"

[dev-dependencies]
rstest = "0.16.0"

[[bin]]
name = "day01-1"
path = "src/day01-1.rs"

[[bin]]
name = "day01-2"
path = "src/day01-2.rs"

[[bin]]
name = "day02-1"
path = "src/day02-1.rs"

[[bin]]
name = "day02-2"
path = "src/day02-2.rs"

[[bin]]
name = "day03-1"
path = "src/day03-1.rs"

[[bin]]
name = "day03-2"
path = "src/day03-2.rs"

[[bin]]
name = "day04-1"
path = "src/day04-1.rs"

[[bin]]
name = "day04-2"
path = "src/day04-2.rs"

[[bin]]
name = "day05-1"
path = "src/day05-1.rs"

[[bin]]
name = "day05-2"
path = "src/day05-2.rs"

[[bin]]
name = "day06-1"
path = "src/day06-1.rs"

[[bin]]
name = "day06-2"
path = "src/day06-2.rs"

[[bin]]
name = "day07-1"
path = "src/day07-1.rs"

[[bin]]
name = "day07-2"
path = "src/day07-2.rs"

[[bin]]
name = "day08-1"
path = "src/day08-1.rs"

[[bin]]
name = "day08-2"
path = "src/day08-2.rs"

[[bin]]
name = "day09-1"
path = "src/day09-1.rs"

[[bin]]
name = "day09-2"
path = "src/day09-2.rs"

[[bin]]
name = "day10-1"
path = "src/day10-1.rs"

[[bin]]
name = "day10-2"
path = "src/day10-2.rs"

[[bin]]
name = "day11-1"
path = "src/day11-1.rs"

[[bin]]
name = "day11-2"
path = "src/day11-2.rs"
